build(rdm-ui): 重构构建配置以支持 JavaFX
-移除 maven-shade-plugin 和 javapackager 插件- 添加 javafx-maven-plugin 插件
- 更新 maven-assembly-plugin 配置
-简化构建过程并提高可维护性